# tetris

./: CMakeLists.txt  run.bat  setup.bat
src/: main.cpp
